--- a/web-admin/components.json
+++ b/web-admin/components.json
@@ -6,7 +6,7 @@
   "tailwind": {
     "config": "tailwind.config.ts",
     "css": "src/index.css",
-    "baseColor": "emerald",
+    "baseColor": "zinc",
     "cssVariables": true
   },
   "aliases": {
