Update workflows to check standalone domain path first
- Check /var/www/vhosts/micro.sproutify.app/httpdocs first (standalone domain)
- Then check subdomain path as fallback
- Update SFTP upload paths to use standalone domain path

--- a/.github/workflows/deploy-marketing-site.yml
+++ b/.github/workflows/deploy-marketing-site.yml
@@ -70,16 +70,24 @@ jobs:
             HTTPDOCS_PATH=""
             DOMAIN_NAME="micro.sproutify.app"
             
-            # Check for domain-specific paths
-            if [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
-              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
-              echo "✓ Found: $HTTPDOCS_PATH"
-            elif [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
+            # Check for domain-specific paths (try multiple common locations)
+            if [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
               HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME/httpdocs
-              echo "✓ Found: $HTTPDOCS_PATH"
+              echo "✓ Found standalone domain: $HTTPDOCS_PATH"
+            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
+              echo "✓ Found subdomain: $HTTPDOCS_PATH"
             elif [ -d ~/$DOMAIN_NAME/httpdocs ]; then
               HTTPDOCS_PATH=$(cd ~/$DOMAIN_NAME/httpdocs && pwd)
-              echo "✓ Found: $HTTPDOCS_PATH"
+              echo "✓ Found in home directory: $HTTPDOCS_PATH"
+            elif [ -d /var/www/vhosts/$DOMAIN_NAME ]; then
+              # Check if httpdocs exists or if it's the root
+              if [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
+                HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME/httpdocs
+              else
+                HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME
+              fi
+              echo "✓ Found domain directory: $HTTPDOCS_PATH"
             else
               echo "⚠ $DOMAIN_NAME specific path not found"
               echo ""
@@ -131,11 +139,13 @@ jobs:
           script: |
             DOMAIN_NAME="micro.sproutify.app"
             
-            # Use the correct path for domain-specific subdomain
-            if [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
-              cd /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
-            elif [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
+            # Use the correct path - check standalone domain first, then subdomain
+            if [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
               cd /var/www/vhosts/$DOMAIN_NAME/httpdocs
+            elif [ -d /var/www/vhosts/$DOMAIN_NAME ]; then
+              cd /var/www/vhosts/$DOMAIN_NAME
+            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
+              cd /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
             elif [ -d ~/$DOMAIN_NAME/httpdocs ]; then
               cd ~/$DOMAIN_NAME/httpdocs
             elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/httpdocs ]; then
@@ -162,7 +172,7 @@ jobs:
           password: ${{ secrets.IONOS_PASSWORD }}
           port: 2222
           uploads: |
-            ./marketing-site/dist/ => /var/www/vhosts/sweetwaterurbanfarms.com/micro.sproutify.app/httpdocs/
+            ./marketing-site/dist/ => /var/www/vhosts/micro.sproutify.app/httpdocs/
 
       - name: Set file permissions
         uses: appleboy/ssh-action@v1.2.0
