Fix SFTP upload paths to use correct subdomain path
- Update web-admin SFTP path to use sweetwaterurbanfarms.com subdomain
- Update marketing-site SFTP path to use sweetwaterurbanfarms.com subdomain
- Paths now match the actual detected domain structure

--- a/.github/workflows/deploy-marketing-site.yml
+++ b/.github/workflows/deploy-marketing-site.yml
@@ -170,7 +170,7 @@ jobs:
           password: ${{ secrets.IONOS_PASSWORD }}
           port: 2222
           uploads: |
-            ./marketing-site/dist/ => /var/www/vhosts/micro.sproutify.app/httpdocs/
+            ./marketing-site/dist/ => /var/www/vhosts/sweetwaterurbanfarms.com/micro.sproutify.app/httpdocs/
 
       - name: Set file permissions
         uses: appleboy/ssh-action@v1.2.0
