--- a/.github/workflows/deploy-marketing-site.yml
+++ b/.github/workflows/deploy-marketing-site.yml
@@ -1,294 +1,54 @@
 name: Deploy Marketing Site to IONOS
 
 on:
-  workflow_dispatch:  # manual deployment
   push:
     branches:
       - main
     paths:
       - 'marketing-site/**'
       - '.github/workflows/deploy-marketing-site.yml'
+  workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '21'
+          node-version: '20'
           cache: 'npm'
-          cache-dependency-path: 'marketing-site/package-lock.json'
+          cache-dependency-path: marketing-site/package-lock.json
 
       - name: Install dependencies
         working-directory: ./marketing-site
-        run: npm install
+        run: npm ci
 
-      - name: Build Marketing Site
+      - name: Build marketing site
         working-directory: ./marketing-site
         env:
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+          VITE_CLOUDFLARE_TURNSTILE_SITE_KEY: ${{ secrets.VITE_CLOUDFLARE_TURNSTILE_SITE_KEY }}
         run: npm run build
 
-      - name: Copy .htaccess to dist
-        working-directory: ./marketing-site
-        run: cp public/.htaccess dist/.htaccess || echo ".htaccess not found in public, skipping"
-
-      - name: Verify build output
-        working-directory: ./marketing-site
-        run: |
-          echo "=== Build verification ==="
-          echo "Checking dist/index.html:"
-          head -15 dist/index.html
-          echo ""
-          echo "Checking dist/assets:"
-          ls -la dist/assets/ || echo "No assets directory!"
-          echo ""
-          echo "Verifying index.html references compiled JS:"
-          if grep -q "/assets/index-" dist/index.html; then
-            echo "✓ index.html correctly references compiled assets"
-          else
-            echo "✗ ERROR: index.html does not reference compiled assets!"
-            exit 1
-          fi
-
-      - name: Find httpdocs path for marketing site
-        id: find_path
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.IONOS_HOST }}
-          username: ${{ secrets.IONOS_USERNAME }}
-          password: ${{ secrets.IONOS_PASSWORD }}
-          port: 2222
-          script: |
-            echo "=== Looking for micro.sproutify.app httpdocs directory ==="
-            HTTPDOCS_PATH=""
-            DOMAIN_NAME="micro.sproutify.app"
-            
-            # Check for domain-specific paths (try /web first, then /httpdocs as fallback)
-            if [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/web ]; then
-              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/web
-              echo "✓ Found subdomain with /web: $HTTPDOCS_PATH"
-            elif [ -d /var/www/vhosts/$DOMAIN_NAME/web ]; then
-              HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME/web
-              echo "✓ Found standalone domain with /web: $HTTPDOCS_PATH"
-            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
-              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
-              echo "✓ Found subdomain with /httpdocs: $HTTPDOCS_PATH"
-            elif [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
-              HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME/httpdocs
-              echo "✓ Found standalone domain with /httpdocs: $HTTPDOCS_PATH"
-            elif [ -d ~/$DOMAIN_NAME/web ]; then
-              HTTPDOCS_PATH=$(cd ~/$DOMAIN_NAME/web && pwd)
-              echo "✓ Found in home directory with /web: $HTTPDOCS_PATH"
-            elif [ -d ~/$DOMAIN_NAME/httpdocs ]; then
-              HTTPDOCS_PATH=$(cd ~/$DOMAIN_NAME/httpdocs && pwd)
-              echo "✓ Found in home directory with /httpdocs: $HTTPDOCS_PATH"
-            elif [ -d /var/www/vhosts/$DOMAIN_NAME ]; then
-              HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME
-              echo "✓ Found domain directory: $HTTPDOCS_PATH"
-            else
-              echo "⚠ $DOMAIN_NAME specific path not found"
-              echo ""
-              echo "Checking available vhost directories:"
-              ls -la /var/www/vhosts/ 2>/dev/null | head -20 || echo "Cannot list /var/www/vhosts/"
-              echo ""
-              echo "Checking sweetwaterurbanfarms.com subdirectories:"
-              ls -la /var/www/vhosts/sweetwaterurbanfarms.com/ 2>/dev/null | head -20 || echo "Cannot list subdirectories"
-              echo ""
-              echo "⚠ Domain not found. Attempting to use parent domain or create subdomain directory..."
-              
-              # Try to use parent domain's httpdocs or create subdomain directory
-              PARENT_HTTPDOCS="/var/www/vhosts/sweetwaterurbanfarms.com/httpdocs"
-              SUBDOMAIN_HTTPDOCS="/var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs"
-              
-              if [ -d "$PARENT_HTTPDOCS" ]; then
-                echo "✓ Found parent domain httpdocs: $PARENT_HTTPDOCS"
-                echo "⚠ Using parent domain httpdocs. If this is incorrect, create the subdomain in Plesk first."
-                HTTPDOCS_PATH="$PARENT_HTTPDOCS"
-              elif [ -d "/var/www/vhosts/sweetwaterurbanfarms.com" ]; then
-                echo "✓ Found parent domain directory, creating subdomain structure..."
-                mkdir -p "$SUBDOMAIN_HTTPDOCS"
-                HTTPDOCS_PATH="$SUBDOMAIN_HTTPDOCS"
-                echo "✓ Created: $HTTPDOCS_PATH"
-              else
-                echo "ERROR: Could not find or create $DOMAIN_NAME httpdocs directory!"
-                echo ""
-                echo "Please do one of the following:"
-                echo "1. Create the subdomain 'micro.sproutify.app' in Plesk, OR"
-                echo "2. Update the workflow to use the correct path"
-                exit 1
-              fi
-            fi
-            
-            echo ""
-            echo "=== Using path: $HTTPDOCS_PATH ==="
-            echo "Verifying this is the correct directory:"
-            ls -la "$HTTPDOCS_PATH" | head -10
-
-      - name: Clean IONOS directory (marketing site only)
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.IONOS_HOST }}
-          username: ${{ secrets.IONOS_USERNAME }}
-          password: ${{ secrets.IONOS_PASSWORD }}
-          port: 2222
-          script: |
-            DOMAIN_NAME="micro.sproutify.app"
-            
-            # Use the correct path - check /web first, then /httpdocs
-            if [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/web ]; then
-              cd /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/web
-            elif [ -d /var/www/vhosts/$DOMAIN_NAME/web ]; then
-              cd /var/www/vhosts/$DOMAIN_NAME/web
-            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
-              cd /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
-            elif [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
-              cd /var/www/vhosts/$DOMAIN_NAME/httpdocs
-            elif [ -d ~/$DOMAIN_NAME/web ]; then
-              cd ~/$DOMAIN_NAME/web
-            elif [ -d ~/$DOMAIN_NAME/httpdocs ]; then
-              cd ~/$DOMAIN_NAME/httpdocs
-            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/web ]; then
-              echo "⚠ Using parent domain /web (subdomain not found)"
-              cd /var/www/vhosts/sweetwaterurbanfarms.com/web
-            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/httpdocs ]; then
-              echo "⚠ Using parent domain /httpdocs (subdomain not found)"
-              cd /var/www/vhosts/sweetwaterurbanfarms.com/httpdocs
-            else
-              echo "ERROR: $DOMAIN_NAME web/httpdocs directory not found!"
-              echo "This prevents accidentally overwriting the wrong site."
-              exit 1
-            fi
-            
-            echo "Cleaning directory: $(pwd)"
-            echo "⚠ WARNING: This will delete all files EXCEPT /admin subdirectory"
-            # Remove everything except admin directory
-            find . -mindepth 1 -maxdepth 1 ! -name 'admin' -exec rm -rf {} \;
-            rm -rf .[^.]* 2>/dev/null || true
-            echo "Directory cleaned (admin directory preserved)"
-
-      - name: Deploy to IONOS via SFTP (marketing site)
-        uses: Dylan700/sftp-upload-action@v1.2.3
+      - name: Deploy to IONOS via SFTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.IONOS_HOST }}
           username: ${{ secrets.IONOS_USERNAME }}
           password: ${{ secrets.IONOS_PASSWORD }}
-          port: 2222
-          uploads: |
-            ./marketing-site/dist/ => /var/www/vhosts/sweetwaterurbanfarms.com/micro.sproutify.app/httpdocs/
+          local-dir: ./marketing-site/dist/
+          server-dir: /var/www/vhosts/sweetwaterurbanfarms.com/micro.sproutify.app/httpdocs/
+          exclude: |
+            **/.git*
+            **/.git*/**
+            **/node_modules/**
+            **/.DS_Store
 
-      - name: Set file permissions
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.IONOS_HOST }}
-          username: ${{ secrets.IONOS_USERNAME }}
-          password: ${{ secrets.IONOS_PASSWORD }}
-          port: 2222
-          script: |
-            DOMAIN_NAME="micro.sproutify.app"
-            
-            # Use the correct path for domain-specific subdomain
-            if [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
-              cd /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
-            elif [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
-              cd /var/www/vhosts/$DOMAIN_NAME/httpdocs
-            elif [ -d ~/$DOMAIN_NAME/httpdocs ]; then
-              cd ~/$DOMAIN_NAME/httpdocs
-            else
-              echo "ERROR: $DOMAIN_NAME httpdocs directory not found!"
-              exit 1
-            fi
-            
-            echo "Setting permissions in: $(pwd)"
-            # Set directory permissions first
-            find . -type d -exec chmod 755 {} \;
-            # Set file permissions
-            find . -type f -exec chmod 644 {} \;
-            # Ensure index.html is readable
-            if [ -f index.html ]; then
-              chmod 644 index.html
-              echo "✓ index.html permissions set"
-            else
-              echo "⚠ WARNING: index.html not found!"
-            fi
-            # Ensure httpdocs directory is readable
-            chmod 755 .
-            echo "Permissions set"
-
-      - name: Verify deployment
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.IONOS_HOST }}
-          username: ${{ secrets.IONOS_USERNAME }}
-          password: ${{ secrets.IONOS_PASSWORD }}
-          port: 2222
-          script: |
-            DOMAIN_NAME="micro.sproutify.app"
-            
-            # Use the same path detection logic as find_path step
-            if [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
-              HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME/httpdocs
-            elif [ -d /var/www/vhosts/$DOMAIN_NAME ]; then
-              HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME
-            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
-              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
-            elif [ -d ~/$DOMAIN_NAME/httpdocs ]; then
-              HTTPDOCS_PATH=$(cd ~/$DOMAIN_NAME/httpdocs && pwd)
-            else
-              echo "ERROR: $DOMAIN_NAME httpdocs not found"
-              exit 1
-            fi
-            
-            echo "=== Verifying deployment in: $HTTPDOCS_PATH ==="
-            if [ -d "$HTTPDOCS_PATH" ]; then
-              cd "$HTTPDOCS_PATH"
-              echo "Using: $HTTPDOCS_PATH ($(pwd))"
-            else
-              echo "ERROR: $HTTPDOCS_PATH not found"
-              exit 1
-            fi
-            
-            echo ""
-            echo "=== Deployed files ==="
-            ls -la
-            echo ""
-            echo "=== Checking for index.html ==="
-            if [ -f index.html ]; then
-              echo "✓ index.html exists"
-              echo "File permissions:"
-              ls -la index.html
-              echo "First 20 lines of index.html:"
-              head -20 index.html
-              echo ""
-              echo "=== Verifying index.html is readable ==="
-              if [ -r index.html ]; then
-                echo "✓ index.html is readable"
-              else
-                echo "✗ ERROR: index.html is not readable!"
-                chmod 644 index.html
-                echo "Fixed permissions on index.html"
-              fi
-            else
-              echo "ERROR: index.html not found!"
-              echo "Current directory contents:"
-              ls -la
-              exit 1
-            fi
-            
-            echo ""
-            echo "=== Checking assets directory ==="
-            if [ -d assets ]; then
-              echo "✓ assets directory exists"
-              echo "Files in assets directory:"
-              ls -la assets/
-            else
-              echo "ERROR: assets directory not found!"
-              exit 1
-            fi
-
+      - name: Deployment complete
+        run: echo "Marketing site deployed successfully to micro.sproutify.app"
