--- a/.github/workflows/deploy-marketing-site.yml
+++ b/.github/workflows/deploy-marketing-site.yml
@@ -1,34 +1,34 @@
 name: Deploy Marketing Site to IONOS
 
 on:
+  workflow_dispatch:  # manual deployment
   push:
     branches:
       - main
     paths:
       - 'marketing-site/**'
       - '.github/workflows/deploy-marketing-site.yml'
-  workflow_dispatch:
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
-
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '21'
           cache: 'npm'
-          cache-dependency-path: marketing-site/package-lock.json
+          cache-dependency-path: 'marketing-site/package-lock.json'
 
       - name: Install dependencies
         working-directory: ./marketing-site
-        run: npm ci
+        run: npm install
 
-      - name: Build marketing site
+      - name: Build Marketing Site
         working-directory: ./marketing-site
         env:
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
@@ -36,21 +36,200 @@ jobs:
           VITE_CLOUDFLARE_TURNSTILE_SITE_KEY: ${{ secrets.VITE_CLOUDFLARE_TURNSTILE_SITE_KEY }}
         run: npm run build
 
-      - name: Install sshpass
-        run: sudo apt-get update && sudo apt-get install -y sshpass
+      - name: Copy .htaccess to dist
+        working-directory: ./marketing-site
+        run: cp public/.htaccess dist/.htaccess || echo ".htaccess not found in public, skipping"
 
-      - name: Deploy to IONOS via SFTP/SSH
+      - name: Verify build output
+        working-directory: ./marketing-site
         run: |
-          export SSHPASS="$IONOS_PASSWORD"
-          sshpass -e rsync -avz --delete \
-            -e "ssh -o StrictHostKeyChecking=no -p ${IONOS_PORT:-22}" \
-            ./marketing-site/dist/ \
-            $IONOS_USERNAME@$IONOS_HOST:/var/www/vhosts/sweetwaterurbanfarms.com/micro.sproutify.app/httpdocs/
-        env:
-          IONOS_HOST: ${{ secrets.IONOS_HOST }}
-          IONOS_USERNAME: ${{ secrets.IONOS_USERNAME }}
-          IONOS_PASSWORD: ${{ secrets.IONOS_PASSWORD }}
-          IONOS_PORT: ${{ secrets.IONOS_PORT || '22' }}
+          echo "=== Build verification ==="
+          echo "Checking dist/index.html:"
+          head -15 dist/index.html
+          echo ""
+          echo "Checking dist/assets:"
+          ls -la dist/assets/ || echo "No assets directory!"
+          echo ""
+          echo "Verifying index.html references compiled JS:"
+          if grep -q "/assets/index-" dist/index.html; then
+            echo "✓ index.html correctly references compiled assets"
+          else
+            echo "✗ ERROR: index.html does not reference compiled assets!"
+            exit 1
+          fi
 
-      - name: Deployment complete
-        run: echo "Marketing site deployed successfully to micro.sproutify.app"
+      - name: Find httpdocs path for marketing site
+        id: find_path
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.IONOS_HOST }}
+          username: ${{ secrets.IONOS_USERNAME }}
+          password: ${{ secrets.IONOS_PASSWORD }}
+          port: 2222
+          script: |
+            echo "=== Looking for micro.sproutify.app httpdocs directory ==="
+            HTTPDOCS_PATH=""
+            DOMAIN_NAME="micro.sproutify.app"
+            
+            # Check for domain-specific paths (try standalone domain first, then subdomain)
+            if [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME/httpdocs
+              echo "✓ Found standalone domain: $HTTPDOCS_PATH"
+            elif [ -d /var/www/vhosts/$DOMAIN_NAME ]; then
+              if [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
+                HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME/httpdocs
+              else
+                HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME
+              fi
+              echo "✓ Found domain directory: $HTTPDOCS_PATH"
+            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
+              echo "✓ Found subdomain: $HTTPDOCS_PATH"
+            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/httpdocs ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/httpdocs
+              echo "✓ Found parent domain httpdocs: $HTTPDOCS_PATH"
+            else
+              echo "⚠ $DOMAIN_NAME specific path not found"
+              echo "Checking available vhost directories:"
+              ls -la /var/www/vhosts/ 2>/dev/null | head -20 || echo "Cannot list /var/www/vhosts/"
+              echo ""
+              echo "⚠ Using default path: /var/www/vhosts/sweetwaterurbanfarms.com/micro.sproutify.app/httpdocs"
+              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/micro.sproutify.app/httpdocs
+            fi
+            
+            echo ""
+            echo "=== Using path: $HTTPDOCS_PATH ==="
+            echo "Verifying root directory:"
+            ls -la "$HTTPDOCS_PATH" | head -10 || echo "Directory will be created if it doesn't exist"
+
+      - name: Clean IONOS directory (marketing site root only)
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.IONOS_HOST }}
+          username: ${{ secrets.IONOS_USERNAME }}
+          password: ${{ secrets.IONOS_PASSWORD }}
+          port: 2222
+          script: |
+            DOMAIN_NAME="micro.sproutify.app"
+            
+            # Use the correct path - check standalone domain first, then subdomain
+            if [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME/httpdocs
+            elif [ -d /var/www/vhosts/$DOMAIN_NAME ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME
+            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
+            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/httpdocs ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/httpdocs
+            else
+              echo "⚠ Using default path"
+              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/micro.sproutify.app/httpdocs
+            fi
+            
+            echo "Cleaning marketing site root directory: $HTTPDOCS_PATH"
+            echo "⚠ WARNING: This will delete all files in the root httpdocs directory (but NOT /admin)"
+            
+            # Create directory if it doesn't exist
+            mkdir -p "$HTTPDOCS_PATH"
+            cd "$HTTPDOCS_PATH"
+            
+            # Remove all files EXCEPT admin directory
+            find . -maxdepth 1 ! -name '.' ! -name 'admin' -exec rm -rf {} +
+            echo "Marketing site root directory cleaned (admin directory preserved)"
+
+      - name: Deploy to IONOS via SFTP (marketing site)
+        uses: Dylan700/sftp-upload-action@v1.2.3
+        with:
+          server: ${{ secrets.IONOS_HOST }}
+          username: ${{ secrets.IONOS_USERNAME }}
+          password: ${{ secrets.IONOS_PASSWORD }}
+          port: 2222
+          uploads: |
+            ./marketing-site/dist/ => /var/www/vhosts/sweetwaterurbanfarms.com/micro.sproutify.app/httpdocs/
+
+      - name: Set file permissions
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.IONOS_HOST }}
+          username: ${{ secrets.IONOS_USERNAME }}
+          password: ${{ secrets.IONOS_PASSWORD }}
+          port: 2222
+          script: |
+            DOMAIN_NAME="micro.sproutify.app"
+            
+            # Use the correct path
+            if [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/$DOMAIN_NAME/httpdocs
+            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
+            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/httpdocs ]; then
+              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/httpdocs
+            else
+              HTTPDOCS_PATH=/var/www/vhosts/sweetwaterurbanfarms.com/micro.sproutify.app/httpdocs
+            fi
+            
+            cd "$HTTPDOCS_PATH"
+            
+            echo "Setting permissions in: $(pwd)"
+            chmod -R 755 .
+            find . -type f -exec chmod 644 {} \;
+            find . -type d -exec chmod 755 {} \;
+            echo "Permissions set"
+
+      - name: Verify deployment
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.IONOS_HOST }}
+          username: ${{ secrets.IONOS_USERNAME }}
+          password: ${{ secrets.IONOS_PASSWORD }}
+          port: 2222
+          script: |
+            DOMAIN_NAME="micro.sproutify.app"
+            
+            echo "=== Looking for $DOMAIN_NAME httpdocs directory ==="
+            if [ -d /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ]; then
+              cd /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs
+              echo "Using: /var/www/vhosts/sweetwaterurbanfarms.com/$DOMAIN_NAME/httpdocs ($(pwd))"
+            elif [ -d /var/www/vhosts/$DOMAIN_NAME/httpdocs ]; then
+              cd /var/www/vhosts/$DOMAIN_NAME/httpdocs
+              echo "Using: /var/www/vhosts/$DOMAIN_NAME/httpdocs ($(pwd))"
+            elif [ -d /var/www/vhosts/sweetwaterurbanfarms.com/httpdocs ]; then
+              cd /var/www/vhosts/sweetwaterurbanfarms.com/httpdocs
+              echo "Using: /var/www/vhosts/sweetwaterurbanfarms.com/httpdocs ($(pwd))"
+            else
+              echo "ERROR: $DOMAIN_NAME/httpdocs not found"
+              exit 1
+            fi
+            
+            echo ""
+            echo "=== Deployed files ==="
+            ls -la
+            echo ""
+            echo "=== Checking for index.html ==="
+            if [ -f index.html ]; then
+              echo "✓ index.html exists"
+              echo "First 20 lines of index.html:"
+              head -20 index.html
+            else
+              echo "ERROR: index.html not found!"
+              exit 1
+            fi
+            
+            echo ""
+            echo "=== Checking assets directory ==="
+            if [ -d assets ]; then
+              echo "✓ assets directory exists"
+              echo "Files in assets directory:"
+              ls -la assets/ | head -10
+            else
+              echo "ERROR: assets directory not found!"
+              exit 1
+            fi
+            
+            echo ""
+            echo "=== Checking .htaccess ==="
+            if [ -f .htaccess ]; then
+              echo "✓ .htaccess exists"
+            else
+              echo "⚠ .htaccess not found (may be optional)"
+            fi
